2001-10-28  Bruno Haible  <haible@clisp.cons.org>

	* hostname.c: Include "progname.h".
	(program_name): Remove variable.
	(main): Call set_program_name instead of setting program_name.

2001-10-28  Bruno Haible  <haible@clisp.cons.org>

	Create a libgettextsrc shared library.
	* Makefile.am (lib_LTLIBRARIES): New variable.
	(libgettextsrc_la_SOURCES): New variable.
	(msgcmp_SOURCES, msgfmt_SOURCES, msgmerge_SOURCES, msgunfmt_SOURCES,
	xgettext_SOURCES, msgattrib_SOURCES, msgcat_SOURCES, msgcomm_SOURCES,
	msgconv_SOURCES, msgen_SOURCES, msgexec_SOURCES, msggrep_SOURCES,
	msginit_SOURCES, msguniq_SOURCES): Remove source files listed in
	libgettextsrc_la_SOURCES.
	(libgettextsrc_la_LDFLAGS): New variable.
	(msgcmp_LDADD, msgfmt_LDADD, msgmerge_LDADD, msgunfmt_LDADD,
	xgettext_LDADD, msgattrib_LDADD, msgcat_LDADD, msgcomm_LDADD,
	msgconv_LDADD, msgen_LDADD, msgexec_LDADD, msggrep_LDADD,
	msginit_LDADD, msguniq_LDADD): Add libgettextsrc.la. Remove all
	dependencies already listed in libgettextsrc_la_LDFLAGS.
	(po-lex.lo): Depend on po-gram-gen2.h.

2001-10-21  Bruno Haible  <haible@clisp.cons.org>

	* Makefile.am (LDADD): Replace libnlsut.a with libgettextlib.la.
	(*_LDADD): Likewise.

2001-10-26  Bruno Haible  <haible@clisp.cons.org>

	* x-c.h (EXTENSIONS_C): Add ".hxx".

2001-10-21  Bruno Haible  <haible@clisp.cons.org>

	* msgmerge.c (match_domain): Change type of 'processed' argument to
	'unsigned int *'.
	(merge): Change type of 'processed' to 'unsigned int'.

2001-10-21  Bruno Haible  <haible@clisp.cons.org>

	Avoid warnings on platforms where size_t is larger than int.
	* msgfmt.c (check_pair): Use an 'unsigned int' variable instead of
	'size_t', to avoid warnings.
	* po-lex.h (po_gram_error): Cast line number to 'unsigned long'.
	* po-lex.c (po_gram_error): Likewise.
	* x-c.c (extract_c): Likewise.

2001-10-21  Bruno Haible  <haible@clisp.cons.org>

	* msgexec.c [BeOS]: Fix #ifdef conditional.

2001-10-21  Bruno Haible  <haible@clisp.cons.org>
